# FootballPrediction

./: .ai-context.md  .ai-reminder.md  .ai-testing-guide.md  .audit_coverage.txt  .bandit  .best_practices_status.json  .claude-preferences.json  .claude-preferences.md  .claude-settings  .coverage_trends.json  .coveragerc  .cursorrules  .dockerignore  .env.ci  .env.dev  .env.development  .env.docker  .env.example  .env.integration  .env.minimal  .env.production  .env.production.example  .env.secure.template  .env.security  .env.staging  .env.template  .eslintcache  .eslintrc.json  .flake8  .gitattributes  .gitignore  .improvement_status.json  .markdownlint.json  .mlc_config.json  .mypy-ignore  .pre-commit-config.yaml  .prettierrc  .quality_data.json  .ruffignore  24H_SHADOW_MANUAL.md  (+1580 more)
.claude/: README.md  TECH_DEBT_CLEANUP_PLAN.json  architecture_boundary.skill.md  change_impact.skill.md  context_lock.skill.md  mcp-config.json  minimal_change.skill.md  project-quality-config.json  settings.json  settings.local.json  skills.json  test-management.json  test_guard.skill.md  trust.json
.cleanup_backup/: staging_db_backup.sql
.cursor/: index.mdc
.devcontainer/: Dockerfile  devcontainer.json
.feast/: registry.pb
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_GUIDELINES.md  PULL_REQUEST_TEMPLATE.md  ci-setup.md  copilot-instructions.md  observability-setup.md  pull_request_template.md
.mcp/: config.yaml
.venv.backup.20251031_201556/: pyvenv.cfg
FootballPrediction/: .flake8  CHANGELOG.md  CLAUDE.md  Dockerfile  PIPELINE.md  coverage_analysis.py  fix_compatibility.py  generate_secure_keys.sh  quality_dashboard.html  quality_report.txt  requirements.txt
FootballValidation/: validate_basic.py
_deprecated/: README.md
_deprecated_sources/: DEPENDENCY_ISSUES.md
api/: __init__.py  health.py
architecture/: 微服务架构实现.yml
archive/: AI_PROGRAMMING_BEST_PRACTICES.md  API_REFERENCE.md  API_TEST_REPAIR_REPORT.md  CLAUDE_IMPLEMENTATION_REPORT.md  CLAUDE_IMPROVEMENT_STRATEGY.md  CLAUDE_backup.md  CODE_REVIEW_STANDARDS.md  CODE_REVIEW_WORKFLOW.md  CODE_STYLE_IMPROVEMENT_REPORT.md  CODING_STANDARDS.md  COVERAGE_BASELINE_REPORT.md  DEPLOYMENT.md.docs  DEVELOPMENT_SETUP.md  EIGHTH_ROUND_COMPLETION_REPORT.md  EMERGENCY_ISSUE_CLEANUP_REPORT.md  FIFTH_ROUND_BREAKTHROUGH_REPORT.md  FOURTH_ROUND_QUALITY_REPORT.md  GITHUB_ACTIONS_DOCS.md  GITHUB_ISSUES_CLEANUP_REPORT.md  GITHUB_ISSUES_CREATION_REPORT.md  GITHUB_ISSUES_STANDARD_GUIDE.md  GITHUB_ISSUES_SYNC_REPORT.md  GITHUB_ISSUES_USAGE_GUIDE.md  GIT_FLOW_WORKFLOW.md  GIT_WORKFLOW.md  GitHub_Issues_时效性分析报告.md  GitHub_Issues_细粒度任务计划.md  INDEX.md  INDEX_MINIMAL.md  INTELLIGENT_QUALITY_SYSTEM.md  ISSUE337_PERFORMANCE_OPTIMIZATION_COMPLETION_REPORT.md  ISSUE803_CI_MODERNIZATION_REPORT.md  ISSUE805_DOCUMENTATION_QUALITY_REPORT.md  ISSUE83_EXECUTION_SUMMARY.md  ISSUE83_PHASE1_COMPLETION_REPORT.md  ISSUE84_FINAL_REPORT.md  ISSUE_84_20_PERCENT_COVERAGE_FINAL_SPRINT_REPORT.md  ISSUE_84_COVERAGE_20_PERCENT_MILESTONE_REPORT.md  ISSUE_84_FINAL_COVERAGE_PROGRESS_REPORT.md  LOGGER_FIX_REPORT.md  (+130 more)
backups/: README_L2_BACKUP.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
ci-reports/: quality_gate_report_20251028_012753.json  quality_gate_report_20251028_013038.json
ci_results/: ci_report.md  ci_results_20251103_231749.json  ci_results_20251103_231758.json
compliance/: audit_logging.py  compliance_checker.py  report_generator.py
config/: .env.example  .pre-commit-config.yaml  README_team_mapping.md  __init__.py  acquisition_engines.phase454.json  active_registry.json  alembic.ini  api_optimization_config.py  batch_processing_config.py  cache_strategy_config.py  celery_config.py  constants.js  coverage_60_plus.ini  coverage_boost.ini  coverage_focused.ini  database.js  database_pool_config.py  di-config.yaml  distributed_cache_config.py  docker-compose.full-test.yml  docker-compose.microservices.yml  docker-compose.optimized.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.verify.yml  docker-compose.yml  dom_surgical_config.json  factory_config.js  fotmob_league_mapping.json  fotmob_leagues.json  global_harvest_list.yaml  great_reset_config.json  harvester_settings.json  harvester_v2.yaml  hyper_parameters.yaml  leagues.i18n.json  leagues.json  leagues.yaml  mkdocs.yml  ml_settings.py  (+36 more)
config_backup/: .pre-commit-config.yaml  Dockerfile.ci  Dockerfile.crawler  Dockerfile.optimized  Makefile.test  docker-compose.ci.simple.yml  docker-compose.crawler.yml  docker-compose.lightweight.yml  pyproject.toml
configs/: production.yaml  settings.py  settings.yaml  strategies.yaml
core/: __init__.py
coverage_reports/: daily_report_20251015.json
dashboards/: live_dashboard_2026.py
data/: GOLDEN_REAL_1000.csv  canary_test.csv  combined_multi_season_odds.csv  dataset_v1.csv  enhanced_180_features.csv  final_v7_solid_features.csv  football_prediction.db  football_prediction_Phase1_Final.db  gold_dataset_v1.csv  gold_dataset_with_odds.csv  l1_bundesliga_2023_24.json  l1_bundesliga_2024_25.json  l1_la_liga_2023_24.json  l1_la_liga_2024_25.json  l1_premier_league_2023_24.json  l1_premier_league_2024_25.json  merged_real_odds.csv  multi_league_harvest_report.json  multi_season_merged_odds.csv  multi_season_v85.csv  nowgoal_auth.json  processed_features.csv  real_odds_raw.csv  v9_3_comprehensive_dataset.csv  v9_3_massive_merged_data.csv  v9_3_massive_merged_data_v2.csv  v9_5_sanitized_features.csv  v9_5_ultra_safe_features.csv
database/: __init__.py  seed_data.sql
demo-source/: data_processor.py
demo_source/: calculator.py  data_processor.py  string_utils.py
deploy/: Dockerfile  football-watcher.service  ledger-cron.example
deployment/: blue-green.yml  rolling-update.yml
deployment-notifications/: deployment-announcement.json  deployment-announcement.md  deployment-checklist.json  emergency-contacts.json  monitoring-alerts.json  on-call-schedule.json  on-call-schedule.md  preparation-summary.json
docker/: .env.example  Dockerfile  (+23 more)
(+158862 files in other folders)
