[project]
name = "footballprediction"
version = "171.2.0"
description = "V171 全息收割系统 - 工业级足球预测平台"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "node_modules",
    "logs",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]
# ci_local_parity_preflight_phase1: pre-existing style issues in new preflight files
"scripts/ops/local_pr_gate_preflight.py" = ["D101", "D102", "D103", "N806", "PERF401", "PLR2004"]
"tests/unit/test_local_pr_gate_preflight.py" = ["PLR2004", "SIM115"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Phase2C batch2: pre-existing type annotation gaps in files touched for guard integration.
# These overrides are temporary for the guard phase — files should be properly typed eventually.
[[tool.mypy.overrides]]
module = "src.database.schema_manager"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.database.oddsportal_db_manager"
ignore_errors = true

# Phase2C batch3: pre-existing type annotation gaps in files touched for guard integration.
# These overrides are temporary for the guard phase — files should be properly typed eventually.
[[tool.mypy.overrides]]
module = "src.core.database.odds_injector"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.database.collector_repository"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.data.streaming.streaming_db_writer"
ignore_errors = true

# Phase2 indirect_write_path_guard_phase2: pre-existing type annotation gaps in files touched for guard integration.
# These overrides are temporary for the guard phase — files should be properly typed eventually.
[[tool.mypy.overrides]]
module = "src.services.match_aligner"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.services.match_linker"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.collectors.odds_api_client_v38"
ignore_errors = true

# sc002_alembic_migration_runtime_guard: pre-existing type annotation gaps in Alembic env.py
[[tool.mypy.overrides]]
module = "src.database.migrations.env"
ignore_errors = true

[tool.black]
line-length = 120
target-version = ["py311"]
