[project]
name = "footballprediction"
version = "171.2.0"
description = "V171 全息收割系统 - 工业级足球预测平台"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "node_modules",
    "logs",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/ci/governance_growth_gate.py" = ["C901", "PLR0912", "PLR0915", "PERF401", "ERA001", "PLR2004", "PLW2901"]
"tests/unit/test_governance_growth_gate.py" = ["PLR2004", "PT006"]
"tests/unit/test_governance_growth_gate_hardening.py" = ["PLR2004"]
"tests/*" = ["ARG"]
# ci_local_parity_preflight_phase1: pre-existing style issues in new preflight files
"scripts/ops/local_pr_gate_preflight.py" = ["D101", "D102", "D103", "N806", "PERF401", "PLR2004"]
"tests/unit/test_local_pr_gate_preflight.py" = ["PLR2004", "SIM115"]
# phase5r4_event_bus: pre-existing style issues in event_bus.py — file was >800 lines
# before gatekeeper enforcement; temporary until dedicated event_bus.py cleanup.
"src/services/event_bus.py" = [
    "G004",     # pre-existing f-string logging
    "PLR2004",  # pre-existing magic numbers
    "PTH110",   # pre-existing os.path usage
    "DTZ005",   # pre-existing naive datetime
    "TRY401",   # pre-existing redundant exception in logger.exception
    "PLC0415",  # pre-existing imports inside function
]



[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Phase2C batch2: pre-existing type annotation gaps in files touched for guard integration.
# These overrides are temporary for the guard phase — files should be properly typed eventually.
[[tool.mypy.overrides]]
module = "src.database.schema_manager"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.database.oddsportal_db_manager"
ignore_errors = true

# Phase2C batch3: pre-existing type annotation gaps in files touched for guard integration.
# These overrides are temporary for the guard phase — files should be properly typed eventually.
[[tool.mypy.overrides]]
module = "src.core.database.odds_injector"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.database.collector_repository"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.data.streaming.streaming_db_writer"
ignore_errors = true

# Phase2 indirect_write_path_guard_phase2: pre-existing type annotation gaps in files touched for guard integration.
# These overrides are temporary for the guard phase — files should be properly typed eventually.
[[tool.mypy.overrides]]
module = "src.services.match_aligner"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.services.match_linker"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.collectors.odds_api_client_v38"
ignore_errors = true

# sc002_alembic_migration_runtime_guard: pre-existing type annotation gaps in Alembic env.py
[[tool.mypy.overrides]]
module = "src.database.migrations.env"
ignore_errors = true

# phase5r4_event_bus: pre-existing type annotation gaps in event_bus.py
# Temporary override — remove after dedicated event_bus.py type cleanup.
[[tool.mypy.overrides]]
module = "src.services.event_bus"
ignore_errors = true

[tool.black]
line-length = 120
target-version = ["py311"]
